Fixes the lack of whitespace after lists in video descriptions.

--- a/pmc_theme/static/css/video_page.css
+++ b/pmc_theme/static/css/video_page.css
@@ -100,6 +100,7 @@ float: right;
 #main .description ul {
     display: block;
     float: none;
+    padding-bottom: 20px;
 }
 
 #main .description ul li {
